Main notebook is updated

--- a/Main Notebook.ipynb
+++ b/Main Notebook.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title:Covid-19 World Data \n",
-    "Stduent Registration No:2015331551\n",
-    "\n",
-    "Problem:Predicting Coronavirus(covid-19) Recovery cases with different types of classification algorithms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution Steps, Code, Input Sample, Output Sample\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import Libraries And Load Covid_19 world dataset"
+    "# Libraries insertion"
    ]
   },
   {
@@ -38,6 +19,13 @@
     "import seaborn as sns \n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data insertion"
    ]
   },
   {
@@ -1169,243 +1157,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:140: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  keepdims=keepdims)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:132: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\nonparametric\\kde.py:487: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  binned = fast_linbin(X, a, b, gridsize) / (delta * nobs)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\nonparametric\\kdetools.py:34: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  FAC1 = 2*(np.pi*bw/RANGE)**2\n"
-     ]
-    }
-   ],
-   "source": [
-    "#sns.pairplot(world_data,hue='Recovered')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Converting Categorical Features\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Albania</th>\n",
-       "      <th>Algeria</th>\n",
-       "      <th>Andorra</th>\n",
-       "      <th>Angola</th>\n",
-       "      <th>Antigua and Barbuda</th>\n",
-       "      <th>Argentina</th>\n",
-       "      <th>Armenia</th>\n",
-       "      <th>Australia</th>\n",
-       "      <th>Austria</th>\n",
-       "      <th>Azerbaijan</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Uganda</th>\n",
-       "      <th>Ukraine</th>\n",
-       "      <th>United Arab Emirates</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <th>Uruguay</th>\n",
-       "      <th>Uzbekistan</th>\n",
-       "      <th>Venezuela</th>\n",
-       "      <th>Vietnam</th>\n",
-       "      <th>Zambia</th>\n",
-       "      <th>Zimbabwe</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 182 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Albania  Algeria  Andorra  Angola  Antigua and Barbuda  Argentina  Armenia  \\\n",
-       "0        0        0        0       0                    0          0        0   \n",
-       "1        0        0        0       0                    0          0        0   \n",
-       "2        0        0        0       0                    0          0        0   \n",
-       "3        0        0        0       0                    0          0        0   \n",
-       "4        0        0        0       0                    0          0        0   \n",
-       "\n",
-       "   Australia  Austria  Azerbaijan  ...  Uganda  Ukraine  United Arab Emirates  \\\n",
-       "0          0        0           0  ...       0        0                     0   \n",
-       "1          0        0           0  ...       0        0                     0   \n",
-       "2          0        0           0  ...       0        0                     0   \n",
-       "3          0        0           0  ...       0        0                     0   \n",
-       "4          0        0           0  ...       0        0                     0   \n",
-       "\n",
-       "   United Kingdom  Uruguay  Uzbekistan  Venezuela  Vietnam  Zambia  Zimbabwe  \n",
-       "0               0        0           0          0        0       0         0  \n",
-       "1               0        0           0          0        0       0         0  \n",
-       "2               0        0           0          0        0       0         0  \n",
-       "3               0        0           0          0        0       0         0  \n",
-       "4               0        0           0          0        0       0         0  \n",
-       "\n",
-       "[5 rows x 182 columns]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#pd.get_dummies(world_data['Country/Region'],drop_first=True).head()"
    ]
   },
   {
@@ -1416,24 +1171,6 @@
    "source": [
     "''''country = pd.get_dummies(world_data['Country/Region'],drop_first=True)\n",
     "state = pd.get_dummies(world_data['Province/State'],drop_first=True)'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#world_data = pd.concat([world_data,country,state],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#world_data.drop(['Country/Region','Province/State'],axis=1,inplace=True)"
    ]
   },
   {
@@ -1565,18 +1302,6 @@
     "world_data['Province/State']= label_encoder.fit_transform(world_data['Province/State']) \n",
     "  \n",
     "world_data['Province/State'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#world_data['Date_new'] = world_data['Date'].str.replace('\\D', '').astype(int)\n",
-    "#features_drop = ['Date']\n",
-    "#world_data= world_data.drop(features_drop, axis=1)\n",
-    "                 "
    ]
   },
   {
@@ -1871,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train and Test\n"
+    "# Dataset Spliting\n"
    ]
   },
   {
@@ -1891,7 +1616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic Regression"
+    "# Model 1: Logistic Regression"
    ]
   },
   {
@@ -1933,7 +1658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Tree"
+    "# Model 2: Decision Tree"
    ]
   },
   {
@@ -1964,7 +1689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest "
+    "# Model 3: Random Forest "
    ]
   },
   {
@@ -1995,7 +1720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K Neighbors Classifier"
+    "# Model 4: K Neighbors Classifier"
    ]
   },
   {
@@ -2021,20 +1746,6 @@
     "model.fit(X_train, y_train)\n",
     "model.score(X_test, y_test)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Support Vector Machine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
